# Agentic-Knowledge-Bank

./: .env.example  .gitignore  AGENTS.md  CHANGELOG.md  README.md  README.zh-CN.md  README_zh.md  TODO.md  mcp_knowledge_server.py  opencode.json  project-vision.md  pyproject.toml
.codex/: mcp.json
.github/workflows/: daily-collect.yml  llm-e2e.yml
.opencode/agents/: analyzer.md  collector.md  organizer.md
docs/: personal-knowledge-strategy-plan.md
docs/archive/: README.md  (+3 more)
hooks/: check_quality.py  validate_json.py
notebooks/: langgraph_workflow_demo.ipynb
pipeline/: model_client.py  pipeline.py  rss_reader.py
prompts/: analyzer.txt  reviewer.txt  reviewer_system.txt  reviser.txt  reviser_system.txt
scripts/: backfill_scores.py  build_index.py  model_client.py  pipeline.py  rss_reader.py
spec/: github-trending-skill-sepc.md  hooks-spec.md  keywords-v0.1.txt  requirements.md  tech-spec.md  testing-strategy.md  upgrade-0.4.0-to-0.5.0.md
tests/: test_analyzer_normalization.py  test_backfill_scores.py  test_collector.py  test_digest.py  test_hooks.py  test_llm_e2e.py  test_model_client.py  test_notebook.py  test_organizer_persistence.py  test_pipeline.py  test_prompts.py  test_relevance_profile.py  test_rss_reader.py  test_ui_sources.py  test_workflow.py  test_workflow_nodes.py
ui/: README.md  app.py
workflows/: __init__.py  analyzer.py  collector.py  digest.py  graph.py  human_flag.py  model_client.py  organizer.py  planner.py  prompts.py  relevance_profile.py  relevance_profile.yaml  reviewer.py  reviser.py  rss_sources.yaml  skipped.py  state.py
(+885 files in other folders)
